force update on builds

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 2.8)
 
 include_directories(${inheritance_SOURCE_DIR}/inc)
 
-message(STATUS "${LEVEL}")
+add_custom_target(
+    forceUpdate
+    COMMAND ${CMAKE_SOURCE_DIR}/scripts/update.sh
+)
 
 if (${LEVEL} STREQUAL "basic")
 add_executable(basic basic.cpp)
+add_dependencies(basic forceUpdate)
 target_link_libraries(basic
     inheritance
     libgtest
@@ -15,6 +19,7 @@ endif()
 
 if (${LEVEL} STREQUAL "intermediate")
 add_executable(intermediate intermediate.cpp)
+add_dependencies(intermediate forceUpdate)
 target_link_libraries(intermediate
     inheritance
     libgtest
@@ -24,6 +29,7 @@ endif()
 
 if (${LEVEL} STREQUAL "advanced")
 add_executable(advanced advanced.cpp)
+add_dependencies(advanced forceUpdate)
 target_link_libraries(advanced
     inheritance
     libgtest
@@ -33,6 +39,7 @@ endif()
 
 if (${LEVEL} STREQUAL "expert")
 add_executable(expert expert.cpp)
+add_dependencies(expert forceUpdate)
 target_link_libraries(expert
     inheritance
     libgtest
